@@ -4,13 +4,13 @@ def createSurveyEventHandler(ob, event):
     if not 'acl_users' in ob.objectIds():
         ob.createLocalPas()
     try:
-        respondents = ob.respondents
+        respondents = ob.aq_inner.aq_base.respondents
     except AttributeError:
         ob.reset()
 
 def createQuestionEventHandler(ob, event):
     """Initialise the question"""
     try:
-        answers = ob.answers
+        answers = ob.aq_inner.aq_base.answers
     except AttributeError:
         ob.reset()
